--- a/themes/pulsar/layouts/partials/header.html
+++ b/themes/pulsar/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <header>
   <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-dark">
       <a class="navbar-brand" href="#">{{ .Site.Title }}</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
         aria-expanded="false" aria-label="Toggle navigation">
