--- a/themes/pulsar/layouts/partials/head.html
+++ b/themes/pulsar/layouts/partials/head.html
@@ -3,6 +3,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{{ .Site.Title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="{{"css/main.minified.css" | relURL}}" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    {{/*  Bootstrap  */}}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    {{/*  Font Awesome  */}}
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    {{/*  Minified CSS  */}}
+    <link rel="stylesheet" type="text/css" media="screen" href="{{"css/main.minified.css" | relURL}}" />
+
 </head>
