--- a/themes/pulsar/src/scss/partials/_base.scss
+++ b/themes/pulsar/src/scss/partials/_base.scss
@@ -4,7 +4,7 @@ body {
     min-height: 100vh;
     margin: 0;
     font-family: sans-serif;
-    background-color: #ffffff;
+    background-color:#131127;
 }
 
 .wrapper {
