--- a/themes/pulsar/src/scss/partials/_footer.scss
+++ b/themes/pulsar/src/scss/partials/_footer.scss
@@ -1,5 +1,7 @@
 footer {
-  background-color: #263238;
+  background-color: #100e20;
+  border-top: 1px solid rgba(255, 255, 255, 0.05);
+
   .container {
     display: flex;
     justify-content: center;
