--- a/themes/pulsar/layouts/partials/hero.html
+++ b/themes/pulsar/layouts/partials/hero.html
@@ -1,5 +1,26 @@
 <div class="hero">
-    <div class="container pt-5 pb-5">
-        <h1>Web Developper</h1>
+    <div class="container left pt-5 pb-5">
+        <div class="divider"></div>
+        <div class="row">
+            <div class="col-lg-6">
+                <h1 class="hero-title">Olivier_Chemla.<strong>dev</strong></h1>
+                <h3 class="hero-subtitle">> Web Developper & Designer</h3>
+                <div class="hero-footer">
+                    <a href="" class="btn btn-outline-light">Découvrir</a>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="hero-console">
+                    <div class="hero-console-header">
+                        <div class="hero-console-info">shell <i class="fas fa-times"></i></div>
+                    </div>
+                    <div class="hero-console-text">
+                    <p> > Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime dignissimos consequuntur quia
+                        accusamus esse rerum dolor, vitae nemo! Ratione perferendis doloribus voluptatem iusto
+                        blanditiis facilis nesciunt voluptate cum pariatur. Fugit.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
