--- a/themes/pulsar/src/sass/main.scss
+++ b/themes/pulsar/src/sass/main.scss
@@ -1,7 +1,9 @@
+// Modules
+@import "modules/colors";
+
+// Partials
 @import "partials/base";
 @import "partials/header.scss";
 @import "partials/footer.scss";
+@import "partials/buttons.scss";
 @import "partials/hero.scss";
-
-
-
