--- a/themes/pulsar/layouts/partials/hero.html
+++ b/themes/pulsar/layouts/partials/hero.html
@@ -1,23 +1,31 @@
 <div class="hero">
-    <div class="container left pt-5 pb-5">
-        <div class="divider"></div>
+    <div class="container">
+
         <div class="row">
             <div class="col-lg-6">
-                <h1 class="hero-title">Olivier_Chemla.<strong>dev</strong></h1>
-                <h3 class="hero-subtitle">> Web Developper & Designer</h3>
-                <div class="hero-footer">
-                    <a href="" class="btn btn-outline-light">Découvrir</a>
+                <div class="hero-wrapper">
+                    <div class="divider"></div>
+                    <h1 class="hero-title">// Olivier_Chemla.</h1>
+                    <h3 class="hero-subtitle"> { Web Developper & Designer }</h3>
+                    <div class="hero-footer text-right">
+                        <a href="" class="btn btn-outline-light">Découvrir <i class="fas fa-arrow-alt-circle-down ml-2"></i></a>
+                    </div>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="hero-console">
                     <div class="hero-console-header">
-                        <div class="hero-console-info">shell <i class="fas fa-times"></i></div>
+                        <div class="hero-console-info">shell --> description <i class="fas fa-times"></i></div>
                     </div>
                     <div class="hero-console-text">
-                    <p> > Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime dignissimos consequuntur quia
+                        > Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime dignissimos consequuntur
+                        quia
                         accusamus esse rerum dolor, vitae nemo! Ratione perferendis doloribus voluptatem iusto
-                        blanditiis facilis nesciunt voluptate cum pariatur. Fugit.</p>
+                        blanditiis facilis nesciunt voluptate cum pariatur. Fugit.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime dignissimos consequuntur
+                        quia
+                        accusamus esse rerum dolor, vitae nemo! Ratione perferendis doloribus voluptatem iusto
+                        blanditiis facilis nesciunt voluptate cum pariatur. Fugit.
                     </div>
                 </div>
             </div>
