--- a/themes/pulsar/src/sass/main.scss
+++ b/themes/pulsar/src/sass/main.scss
@@ -7,3 +7,5 @@
 @import "partials/footer.scss";
 @import "partials/buttons.scss";
 @import "partials/hero.scss";
+@import "partials/sections.scss";
+
