--- a/themes/pulsar/src/sass/modules/_colors.scss
+++ b/themes/pulsar/src/sass/modules/_colors.scss
@@ -4,15 +4,16 @@ $purple-spectre: #651fff;
 $green-acide: #00e676;
 $red-volcano: #f44336;
 $pink-lady: #e91e63;
+$yellow-racing: #e49008;
 $white: #fff;
 $grey: #202020;
 $light: #e0e0e0;
-$night: #0d0d0e;
-$dark-night: #131127;
+$night: #000000;
+$dark-night: #020202;
 $black: #000000;
 
 // Colors Sheme
-$primary: $blue-electric;
+$primary: $purple-spectre;
 $secondary: $grey;
 $danger: $red-volcano;
 $success: $green-acide;
