--- a/themes/pulsar/layouts/partials/skills.html
+++ b/themes/pulsar/layouts/partials/skills.html
@@ -1,18 +1,38 @@
-<div class="container">
-    <button class="btn btn-primary" onclick="setProgress()">Start Benchmark</button>
-    <div class="row">
-        <div class="col-lg-6">
-            <div class="skill-title text-white">HTML</div>
-            <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" value="80"></div>
+<section class="section-home">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                 <!-- Empty Column-->
+            </div>
+            <div class="col-lg-6">
+                <div class="section-home-header text-right">
+                    <h3 class="section-home-title">Mes_Compétences \\</h3>
+                    <p class="section-home-subtitle">Vous trouverez mes compétences si dessous</p>
+                </div>
             </div>
         </div>
-        <div class="col-lg-6">
-            <div class="skill-title text-white">CSS</div>
-            <div class="progress">
-                <div class="progress-bar progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0"
-                    aria-valuemax="100" style="width: 50%" value="30"></div>
+
+
+        <button class="btn btn-outline-light btn-sm mb-4" onclick="setProgress()">Start Benchmark <i class="far fa-play-circle ml-2"></i></button>
+
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="skill-title">HTML</div>
+                <p class="skill-description">Un potentiel beaucoup trop puissant, vous n'êtes pas prêt.</p>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"
+                        value="80"></div>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="skill-title">CSS</div>
+                <p class="skill-description">De bonne connaisances, j'ai fait ce site quand même !</p>
+                <div class="progress">
+                    <div class="progress-bar progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+                        aria-valuemax="100" style="width: 50%" value="30"></div>
+                </div>
             </div>
         </div>
+
     </div>
-</div>
+</section>
