--- a/themes/pulsar/src/sass/partials/_base.scss
+++ b/themes/pulsar/src/sass/partials/_base.scss
@@ -3,14 +3,19 @@ body {
     flex-direction: column;
     min-height: 100vh;
     margin: 0;
-    font-family: sans-serif;
+    font-family: 'Rubik', sans-serif;
     background-color: $background;
 }
 
 .wrapper {
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
     flex-grow: 1;
     min-height: 400px;
+}
+
+::selection {
+    background: $primary;
+}
+
+::-moz-selection {
+    background: $primary;
 }
