--- a/themes/pulsar/src/sass/partials/_footer.scss
+++ b/themes/pulsar/src/sass/partials/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-  background-color: #100e20;
+  background-color: $dark-night;
   border-top: 1px solid rgba(255, 255, 255, 0.05);
 
   .container {
