--- a/themes/pulsar/src/sass/partials/_hero.scss
+++ b/themes/pulsar/src/sass/partials/_hero.scss
@@ -6,9 +6,14 @@
     color: #fff !important;
     min-height: 400px;
     background-color: $night;
-    background-color: #0d0d0e;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='0.05'%3E%3Cpath opacity='.5' d='M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z'/%3E%3Cpath d='M6 5V0H5v5H0v1h5v94h1V6h94V5H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-    border-bottom: 10px solid $primary;
+    border-bottom: 5px solid $primary;
+}
+
+.hero-wrapper {
+    height: 100%;
+    min-height: 250px;
+    position: relative;
 }
 
 .hero-title {
@@ -27,13 +32,19 @@
 }
 
 .hero-subtitle {
-    margin: 1rem 0rem;
+    margin: 0.5rem 0rem;
     padding: 0.5rem 1rem;
-    width: 80%;
+    position: absolute;
     font-weight: 400;
     font-size: 15pt;
     color: $night;
     background-color: $primary;
+}
+
+.hero-footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 
 .divider {
@@ -51,16 +62,18 @@
     border: 1px solid rgba($white, 0.2);
     font-size: 10pt;
     font-family: 'Fira Code';
-    
+    height: 100%;
+
 }
 
 .hero-console-header {
     position: relative;
-    font-weight: bold;
+    font-weight: lighter;
     height: 1.5rem;
     // border-bottom: 1px solid $white;
 }
-.hero-console-info{
+
+.hero-console-info {
     position: absolute;
     top: 0;
     right: 0;
@@ -69,12 +82,15 @@
     background-color: $white;
     color: $black;
 
-    i{
+    i {
         color: $primary;
     }
 }
-.hero-console-text{
+
+.hero-console-text {
     padding: 1rem;
+    font-weight: lighter;
+    line-height: 1.4rem;
 }
 
 
@@ -107,3 +123,20 @@
         transform: translate(0, 0)
     }
 }
+@media screen and (max-width: 768px) {
+    .hero-title {
+        font-size: 20pt;
+    }
+    .hero-footer {
+        position: relative;
+        text-align: center;
+    }
+    
+  }
+// .hero-area{
+//     width: 100%;
+//     background-color: $black;
+//     color: $white;
+//     font-family: 'Fira Code';
+//     font-size: 10pt;
+// }
