--- a/themes/pulsar/layouts/partials/career.html
+++ b/themes/pulsar/layouts/partials/career.html
@@ -1,14 +1,38 @@
-<section class="home">
+<section class="section-carrer" id="section-career">
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
-                <div class="section-home-header">
-                    <h3 class="section-home-title">// Mon_Parcours</h3>
-                    <p class="section-home-subtitle">Vous trouverez mes compétences si dessous</p>
+                <div class="section-header">
+                    <h3 class="section-title">// Formations_ &_Parcours<div class="cursor blink"></div>
+                    </h3>
+                    <p class="section-subtitle-light">Vous trouverez mes compétences ci dessous</p>
                 </div>
             </div>
             <div class="col-lg-6">
+                <!-- Empty Column-->
+            </div>
+        </div>
 
+        <div class="row">
+            <div class="col-lg-6">
+                <h4>Formations :</h4>
+                <div class="career">
+                    <span class="career-date">Janvier 2018 à Juin 2018</span>
+                    <h5 class="career-title">Développer Front-End</h5>
+                    <h6 class="career-subtitle">L'Artisan du Digital</h6>
+                    <p class="career-text">Création et développement d’un thème WordPress ainsi que le déploiement du
+                        site internet</p>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                    <h4>Parcours Professionel</h4>
+                    <div class="career">
+                        <span class="career-date">Janvier 2018 à Juin 2018</span>
+                        <h5 class="career-title">Développer Front-End</h5>
+                        <h6 class="career-subtitle">L'Artisan du Digital</h6>
+                        <p class="career-text">Création et développement d’un thème WordPress ainsi que le déploiement du
+                            site internet</p>
+                    </div>
             </div>
         </div>
     </div>
