--- a/themes/pulsar/layouts/partials/head.html
+++ b/themes/pulsar/layouts/partials/head.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{{ .Site.Title }}</title>
+    <title>{{ .Site.Title }} | {{ .Site.Author }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     {{/*  Bootstrap  */}}
@@ -11,5 +11,5 @@
     {{/*  Minified CSS  */}}
     <link rel="stylesheet" type="text/css" media="screen" href="{{"css/main.minified.css" | relURL}}" />
     {{/*  Google Font  */}}
-    <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rubik|Biryani" rel="stylesheet">
 </head>
