--- a/themes/pulsar/src/sass/partials/_sections.scss
+++ b/themes/pulsar/src/sass/partials/_sections.scss
@@ -1,19 +1,62 @@
-.section-home {
+section {
     padding: 3rem 0rem;
-    background-color: #000000;
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='199' viewBox='0 0 100 199'%3E%3Cg fill='%23ffffff' fill-opacity='0.08'%3E%3Cpath d='M0 199V0h1v1.99L100 199h-1.12L1 4.22V199H0zM100 2h-.12l-1-2H100v2z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
-    
 }
 
+// Section Skills
+.section-skills {
+    background-color: $background;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23ffffff' fill-opacity='0.1' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+    border-bottom: 1px solid $primary;
+}
 
-.section-home-title {
-    color: $white;
+// Section Career
+.section-carrer {
+    background-color: $primary;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='0.1'%3E%3Cpath opacity='.5' d='M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z'/%3E%3Cpath d='M6 5V0H5v5H0v1h5v94h1V6h94V5H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    border-bottom: 1px solid $primary;
+
+    h4{
+        font-weight: bolder;
+        padding-bottom: 1rem;
+        border-bottom: 2px solid $black;
+    }
+
+}
+
+// Section Structure
+.section-header {}
+
+.section-title {
+    color: $primary;
+    background-color: $white;
+    padding: 0.5rem 1rem;
     font-weight: bolder;
     text-transform: uppercase;
+    height: 3.3rem;
+    vertical-align: bottom;
 }
 
-.section-home-subtitle {
+.section-title-outline {
+    color: $white;
+    border: 2px solid $white;
+    padding: 0.5rem 1rem;
+    font-weight: bolder;
+    text-transform: uppercase;
+    height: 3.3rem;
+    vertical-align: middle;
+}
+
+.section-subtitle {
     color: rgba($color: $primary, $alpha: 1)
+}
+
+.section-subtitle-light {
+    color: rgba($color: $white, $alpha: 1)
+}
+
+// Skills Customization
+.skill {
+    margin: 3rem 0rem;
 }
 
 .skill-title {
@@ -22,16 +65,85 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 }
 
 .skill-description {
-    color: rgba($white, 0.6);
+    color: rgba($white, 0.5);
     font-size: 10pt;
+}
+
+// Carreer Customization
+.career-title {
+    color: $black;
+    background-color: rgba($color: $white, $alpha: 0.1);
+    text-transform: uppercase;
+    font-weight: bolder;
+    display: inline-block;
+}
+
+.career-date {
+    color: $white;
+}
+.career-subtitle{
+    color: rgba($color: $white, $alpha: 0.5)
 }
 
 .progress {
     border-radius: 0px;
     background-color: $white;
-    height: 0.1rem;
+    height: 0.2rem;
 }
 
 .progress-bar {
     background-color: $primary !important;
+    transition: 2s;
+}
+
+.cursor {
+    display: inline-block;
+    margin: 0rem 0.5rem;
+    height: 100%;
+    width: 1rem;
+    background-color: $primary;
+    vertical-align: top;
+}
+
+// Animations
+.spin {
+    animation: spin_7374 5s linear infinite;
+    transform-origin: 50% 50%;
+}
+
+@keyframes spin_7374 {
+    0% {
+        transform: rotate(0deg)
+    }
+
+    100% {
+        transform: rotate(359deg)
+    }
+}
+
+.blink {
+    animation: double-flash_2393 2s ease infinite;
+    transform-origin: 50% 50%;
+}
+
+@keyframes double-flash_2393 {
+    0% {
+        opacity: 1
+    }
+
+    25% {
+        opacity: 0
+    }
+
+    50% {
+        opacity: 1
+    }
+
+    75% {
+        opacity: 0
+    }
+
+    100% {
+        opacity: 1
+    }
 }
