--- a/themes/pulsar/src/sass/modules/_colors.scss
+++ b/themes/pulsar/src/sass/modules/_colors.scss
@@ -13,9 +13,9 @@ $dark-night: #020202;
 $black: #000000;
 
 // Colors Sheme
-$primary: $purple-spectre;
+$primary: $red-volcano;
 $secondary: $grey;
 $danger: $red-volcano;
 $success: $green-acide;
-$background: $night;
+$background: rgb(14, 15, 20);
 $background-dark: $dark-night;
