--- a/themes/pulsar/src/sass/partials/_header.scss
+++ b/themes/pulsar/src/sass/partials/_header.scss
@@ -1,8 +1,8 @@
 header {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-  border-bottom: 1px solid rgba($white, 0.05);
-  background-color: $primary;
+  border-bottom: 1px solid rgba($primary, 1);
+  background-color: $background;
   font-weight: 500;
   color: white;
 }
@@ -11,6 +11,8 @@ header {
   padding: 0rem 0rem;
 }
 
-.active {
+
+.navbar-dark .navbar-nav .active>.nav-link {
   color: $primary !important;
+  font-weight: bolder !important;
 }
