--- a/themes/pulsar/layouts/partials/career.html
+++ b/themes/pulsar/layouts/partials/career.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="section-header">
-                    <h3 class="section-title">// Formations_ &_Parcours<div class="cursor blink"></div>
+                    <h3 class="section-title">// Formations & Parcours<div class="cursor"></div>
                     </h3>
                     <p class="section-subtitle-light">Vous trouverez mes compétences ci dessous</p>
                 </div>
@@ -16,23 +16,31 @@
         <div class="row">
             <div class="col-lg-6">
                 <h4>Formations :</h4>
+                {{ range .Site.Data.formations }}
                 <div class="career">
-                    <span class="career-date">Janvier 2018 à Juin 2018</span>
-                    <h5 class="career-title">Développer Front-End</h5>
-                    <h6 class="career-subtitle">L'Artisan du Digital</h6>
-                    <p class="career-text">Création et développement d’un thème WordPress ainsi que le déploiement du
-                        site internet</p>
+                    {{ $startdate := time .startdate }}
+                    {{ $enddate := time .enddate }}
+                    <span class="career-date">{{ dateFormat "January 2006" $startdate }} // {{ dateFormat "January 2006" $enddate  }}</span>
+                    <h5 class="career-title">{{ .title }}</h5>
+                    <h6 class="career-subtitle">{{ .school }}</h6>
+                    <p class="career-text">{{ .description }}</p>
+                    <hr>
                 </div>
+      
+                {{ end }} 
             </div>
+
             <div class="col-lg-6">
-                    <h4>Parcours Professionel</h4>
-                    <div class="career">
-                        <span class="career-date">Janvier 2018 à Juin 2018</span>
-                        <h5 class="career-title">Développer Front-End</h5>
-                        <h6 class="career-subtitle">L'Artisan du Digital</h6>
-                        <p class="career-text">Création et développement d’un thème WordPress ainsi que le déploiement du
-                            site internet</p>
-                    </div>
+                <h4>Parcours Professionel</h4>
+                {{ range .Site.Data.careers }}
+                <div class="career">
+                    <span class="career-date">{{ .date }}</span>
+                    <h5 class="career-title">{{ .title }}</h5>
+                    <h6 class="career-subtitle">{{ .company }}</h6>
+                    <p class="career-text">{{ .description }}</p>
+                    <hr>
+                </div>
+                {{ end }}
             </div>
         </div>
     </div>
