--- a/themes/pulsar/layouts/partials/hero.html
+++ b/themes/pulsar/layouts/partials/hero.html
@@ -3,6 +3,7 @@
 
         <div class="row">
             <div class="col-lg-6">
+                {{ with .Site.Params.hero }}
                 <div class="hero-wrapper">
                     <div class="divider"></div>
                     <h1 class="hero-title">// Olivier_Chemla.</h1>
@@ -15,19 +16,16 @@
             <div class="col-lg-6">
                 <div class="hero-console">
                     <div class="hero-console-header">
-                        <div class="hero-console-info">shell --> description <i class="fas fa-times"></i></div>
+                        <div class="hero-console-info">shell // description <i class="fas fa-times"></i></div>
                     </div>
                     <div class="hero-console-text">
-                        > Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime dignissimos consequuntur
-                        quia
-                        accusamus esse rerum dolor, vitae nemo! Ratione perferendis doloribus voluptatem iusto
-                        blanditiis facilis nesciunt voluptate cum pariatur. Fugit.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime dignissimos consequuntur
-                        quia
-                        accusamus esse rerum dolor, vitae nemo! Ratione perferendis doloribus voluptatem iusto
-                        blanditiis facilis nesciunt voluptate cum pariatur. Fugit.
-                    </div>
+                            <div id="typed-strings">
+                                <p>{{ .description }}</p>
+                            </div>
+                         <span id="typed"></span>
+                    </div>         
                 </div>
+                {{ end }}
             </div>
         </div>
     </div>
