--- a/themes/pulsar/src/sass/modules/_colors.scss
+++ b/themes/pulsar/src/sass/modules/_colors.scss
@@ -1,7 +1,9 @@
 // Colors Palette
 $blue-electric: #304ffe;
+$blue-light: #0081fa;
 $purple-spectre: #651fff;
 $green-acide: #00e676;
+$green-chewing: #22d1ab;
 $red-volcano: #f44336;
 $pink-lady: #e91e63;
 $yellow-racing: #e49008;
@@ -13,7 +15,7 @@ $dark-night: #020202;
 $black: #000000;
 
 // Colors Sheme
-$primary: $red-volcano;
+$primary: $blue-light;
 $secondary: $grey;
 $danger: $red-volcano;
 $success: $green-acide;
