--- a/themes/pulsar/src/sass/modules/_colors.scss
+++ b/themes/pulsar/src/sass/modules/_colors.scss
@@ -11,7 +11,7 @@ $white: #fff;
 $grey: #202020;
 $light: #e0e0e0;
 $night: #000000;
-$dark-night: #020202;
+$dark-night: #0a0b0b;
 $black: #000000;
 
 // Colors Sheme
