--- a/themes/pulsar/src/sass/main.scss
+++ b/themes/pulsar/src/sass/main.scss
@@ -8,5 +8,8 @@
 @import "partials/buttons.scss";
 @import "partials/hero.scss";
 @import "partials/sections.scss";
-@import "partials/card.scss"
+@import "partials/card.scss";
+@import "partials/forms.scss";
+@import "partials/contact";
+
 
