--- a/themes/pulsar/src/sass/partials/_hero.scss
+++ b/themes/pulsar/src/sass/partials/_hero.scss
@@ -68,7 +68,7 @@
 
 .hero-console-header {
     position: relative;
-    font-weight: lighter;
+    font-weight: bolder;
     height: 1.5rem;
     // border-bottom: 1px solid $white;
 }
