--- a/themes/pulsar/src/sass/partials/_sections.scss
+++ b/themes/pulsar/src/sass/partials/_sections.scss
@@ -18,8 +18,8 @@ section {
     h4{
         font-weight: bolder;
         text-transform: uppercase;
-        border: 2px solid $white;
-        padding: 0.5rem 1rem;
+        border-bottom: 1px solid $white;
+        padding: 1rem 0rem;
         color: $white;
         margin: 3rem 0rem;
     }
