--- a/themes/pulsar/src/sass/modules/_colors.scss
+++ b/themes/pulsar/src/sass/modules/_colors.scss
@@ -8,6 +8,7 @@ $red-volcano: #f44336;
 $pink-lady: #e91e63;
 $yellow-racing: #e49008;
 $white: #fff;
+$ton-daron: #331b0d;
 $grey: #202020;
 $light: #e0e0e0;
 $night: #000000;
