--- a/themes/pulsar/src/sass/partials/_contact.scss
+++ b/themes/pulsar/src/sass/partials/_contact.scss
@@ -3,18 +3,17 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
     grid-template-areas: "Area-Left Area-Right";
-    flex-grow: 1;
 }
 
 .split-element-left {
-    flex-grow: 1;
+    flex: 1;
     height: 100%;
     width: 100%;
     background-color: $primary;
 }
 
 .split-element-right {
-    flex-grow: 1;
+    flex: 1;
     height: 100%;
     width: 100%;
     background-color: $success;
