--- a/themes/pulsar/layouts/projects/list.html
+++ b/themes/pulsar/layouts/projects/list.html
@@ -1,5 +1,6 @@
 {{ define "main" }}
 <main>
+    <div class="container">
     <article>
         <header>
             <h1>{{.Title}}</h1>
@@ -15,5 +16,6 @@
         </li>
     {{ end }}
     </ul>
+</div>
 </main>
 {{ end }}
