--- a/themes/pulsar/layouts/partials/footer.html
+++ b/themes/pulsar/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer>
     <div class="container">
-            <p>Copyright &copy; {{ now.Format "2006" }} &middot; All rights reserved &middot; <a href="{{ .Site.BaseURL }}"> {{ .Site.Title }}</a> &middot; Designed by {{ .Site.Author.name }}</p>
+            <p>Copyright &copy; {{ now.Format "2006" }} &middot; All rights reserved &middot; <a href="{{ .Site.BaseURL }}"> {{ .Site.Title }}</a> &middot; Builted & Designed by {{ .Site.Author.name }}</p>
     </div>
 </footer>
