--- a/themes/pulsar/layouts/partials/skills.html
+++ b/themes/pulsar/layouts/partials/skills.html
@@ -15,7 +15,7 @@
             {{ end }}
         </div>
 
-        <button class="btn btn-outline-primary btn-sm mb-3" onclick="setProgress()" id="start-benchmark">Start
+        <button class="btn btn-primary btn-sm mb-3" onclick="setProgress()" id="start-benchmark">Start
             Benchmark<i class="fas fa-play-circle ml-2"></i></button>
 
         <div class="row">
@@ -24,7 +24,7 @@
             <div class="col-lg-6">
                 {{ range first 3 .Site.Params.Skills }}
                 <div class="skill">
-                    <div class="skill-title">{{ .name }}</div>
+                    <div class="skill-title"><i class="{{ .pre }} mr-2"></i>{{ .name }}</div>
                     <p class="skill-description">{{ .description }}</p>
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
@@ -39,7 +39,7 @@
             <div class="col-lg-6">
                 {{ range after 3 .Site.Params.Skills }}
                 <div class="skill">
-                    <div class="skill-title">{{ .name }}</div>
+                    <div class="skill-title"><i class="{{ .pre }} mr-2"></i>{{ .name }}</div>
                     <p class="skill-description">{{ .description }}</p>
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
