--- a/themes/pulsar/src/sass/partials/_buttons.scss
+++ b/themes/pulsar/src/sass/partials/_buttons.scss
@@ -3,15 +3,29 @@
     text-transform: uppercase;
 }
 
-.btn-outline-primary {
-    color: $primary;
-    border: 1px solid $primary;
-}
-.btn-outline-primary:hover{
+.btn-primary {
     background-color: $primary;
     border: 1px solid $primary;
 }
 
-.btn-outline-primary:focus{
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active {
+    background-color: rgba($color: $primary, $alpha: 1);
+    border: 1px solid rgba($color: $primary, $alpha: 1);
+    box-shadow: none;
+}
+
+.btn-outline-primary {
+    color: $primary;
+    border: 1px solid $primary;
+}
+
+.btn-outline-primary:hover {
+    background-color: $primary;
+    border: 1px solid $primary;
+}
+
+.btn-outline-primary:focus {
     box-shadow: none;
 }
