--- a/themes/pulsar/src/sass/partials/_card.scss
+++ b/themes/pulsar/src/sass/partials/_card.scss
@@ -3,7 +3,18 @@
     border: 1px solid rgba($color: $white, $alpha: 0.1);
     background-color: $background;
     color: $white;
-} 
+    transition: 0.3s;
+    a {
+        text-decoration: none;
+        color: $white;
+    }
+}
+
+.card:hover {
+    transform: scale(1.05);
+    background-color: $background-dark;
+}
+
 
 .card-title {
     color: $primary;
