--- a/themes/pulsar/src/sass/partials/_header.scss
+++ b/themes/pulsar/src/sass/partials/_header.scss
@@ -2,9 +2,10 @@ header {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   border-bottom: 1px solid rgba($primary, 1);
-  background-color: $background;
+  box-shadow: 0px 10px 10px rgba($color: $black, $alpha: 0.1);
   font-weight: 500;
   color: white;
+  z-index: 10;
 }
 
 .navbar {
@@ -17,6 +18,6 @@ header {
 
 
 .navbar-dark .navbar-nav .active>.nav-link {
-  color: $primary !important;
+  color: $white!important;
   font-weight: bolder !important;
 }
