--- a/themes/pulsar/layouts/partials/hero.html
+++ b/themes/pulsar/layouts/partials/hero.html
@@ -7,7 +7,7 @@
                 <div class="hero-wrapper">
                     <div class="divider"></div>
                     <h1 class="hero-title">// Olivier_Chemla.</h1>
-                    <h3 class="hero-subtitle"> { Developper Front-End & Designer }</h3>
+                    <h3 class="hero-subtitle"> { Front-End Developper & Designer }</h3>
                     <div class="hero-footer text-right">
                         <a href="#section-skills" class="btn btn-outline-light">Découvrir <i class="fas fa-arrow-alt-circle-down ml-2"></i></a>
                     </div>
