--- a/themes/pulsar/layouts/partials/head.html
+++ b/themes/pulsar/layouts/partials/head.html
@@ -1,14 +1,4 @@
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134092543-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-134092543-1');
-    </script>
-
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{{ .Site.Title }} | {{ .Site.Author.name }}</title>
@@ -24,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     {{/* Minified CSS */}}
     <link rel="stylesheet" type="text/css" media="screen" href="{{"css/main.minified.css" | relURL}}" />
-    {{/* Google Font */}}
+    {{/* Google Font & Fonts */}}
     <link href="https://fonts.googleapis.com/css?family=Rubik|Biryani" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/tonsky/FiraCode@1.206/distr/fira_code.css">
 </head>
